--- a/_layouts/logos.html
+++ b/_layouts/logos.html
@@ -26,7 +26,7 @@
     <link rel="apple-touch-icon" href="{{ site.baseurl }}/icon.png" />
 
     <link rel="stylesheet" href="{{ site.baseurl }}/docs/assets/css/styles.css" />
-    <link rel="stylesheet" href="{{ site.baseurl }}/docs/assets/css{{ site.baseurl }}/logos.css" />
+    <link rel="stylesheet" href="{{ site.baseurl }}/docs/assets/css/logos.css" />
 
     <title>{{ page.title }}</title>
     <link rel="manifest" href="{{ site.baseurl }}/site.webmanifest" />
@@ -66,6 +66,6 @@
       </p>
     </footer>
     <script src="{{ site.baseurl }}/docs/assets/js/jquery-3.7.1.min.js"></script>
-    <script src="{{ site.baseurl }}/docs/assets/js{{ site.baseurl }}/logos.js"></script>
+    <script src="{{ site.baseurl }}/docs/assets/js/logos.js"></script>
   </body>
 </html>
