Corrige rutas con baseurl para GitHub Pages

--- a/_layouts/logos.html
+++ b/_layouts/logos.html
@@ -43,7 +43,7 @@
     </header>
     <nav>
       <ul>
-        <li><a href="/">Inicio</a></li>
+        <li><a href="{{ site.baseurl }}/">Inicio</a></li>
         <li><a href="{{ site.baseurl }}/logos-press/circulo/">Guía del Educador</a></li>
         <li><a href="{{ site.baseurl }}/logos-press/saw/">Libros de Consulta</a></li>
         <li><a href="{{ site.baseurl }}/logos-press/qe/">Quinto Evangelio</a></li>
