--- a/docs/assets/css/logos.css
+++ b/docs/assets/css/logos.css
@@ -46,6 +46,7 @@ article a {
     transition: color 0.2s, background 0.2s;
     border-radius: 2px;
     padding: 1px 2px;
+    word-break: break-all;
 }
 
 article a:hover,
@@ -115,6 +116,7 @@ p {
     line-height: 1.7;
     margin: 1em 0;
     font-size: 1.1em;
+    word-break: break-all;
 }
 
 ol, ul {
