--- a/_layouts/logos.html
+++ b/_layouts/logos.html
@@ -22,7 +22,7 @@
     <meta property="og:image:height" content="630" />
 
     <link rel="icon" href="{{ site.baseurl }}/favicon.ico" sizes="any" />
-    <link rel="icon" href="/circulo-solar/icon.svg" type="image/svg+xml" />
+    <link rel="icon" href="{{ site.baseurl }}/icon.svg" type="image/svg+xml" />
     <link rel="icon" href="{{ site.baseurl }}/icon.png" sizes="32x32" type="image/png" />
     <link rel="apple-touch-icon" href="{{ site.baseurl }}/apple-touch-icon.png" sizes="180x180" type="image/png" />
 
