Se agrega el formato de folleto para imprimir

--- a/_layouts/logos.html
+++ b/_layouts/logos.html
@@ -80,7 +80,7 @@
               >
             </li>
             <li>
-              <a href="{{ site.baseurl }}/docs/assets/media/{{ page.type }}/pdf/{{ page.number }}.pdf" download
+              <a href="{{ site.baseurl }}/docs/assets/media/{{ page.type }}/pdf/{{ page.number }}-booklet.pdf" download
                 >Descargar PDF para imprimir un booklet</a
               >
             </li>
